Added patch endpoint
